[gd_scene load_steps=32 format=2]

[ext_resource path="res://assets/sprites/actors/beige/alienBeige_stand.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/actors/beige/alienBeige_walk2.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/actors/beige/alienBeige_walk1.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/actors/beige/alienBeige_jump.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/actors/green/alienGreen_jump.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/actors/green/alienGreen_hurt.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/actors/blue/alienBlue_walk1.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/actors/beige/alienBeige_hurt.png" type="Texture" id=8]
[ext_resource path="res://entities/actors/Hueorph.gd" type="Script" id=9]
[ext_resource path="res://assets/sprites/actors/green/alienGreen_stand.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/actors/blue/alienBlue_jump.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/actors/pink/alienPink_jump.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/actors/blue/alienBlue_hurt.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/actors/pink/alienPink_walk2.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/actors/blue/alienBlue_stand.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/actors/pink/alienPink_hurt.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/actors/pink/alienPink_stand.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/actors/green/alienGreen_walk1.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/actors/blue/alienBlue_walk2.png" type="Texture" id=19]
[ext_resource path="res://assets/sprites/actors/pink/alienPink_walk1.png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/actors/green/alienGreen_walk2.png" type="Texture" id=21]
[ext_resource path="res://entities/components/HurtBox.tscn" type="PackedScene" id=22]
[ext_resource path="res://assets/sounds/forceField_000.ogg" type="AudioStream" id=23]
[ext_resource path="res://entities/components/HitBox.tscn" type="PackedScene" id=24]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "hurt",
"speed": 1.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 19 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 21 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 14 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 23.0
height = 36.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 21.0
height = 22.0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 20, 5 )

[node name="HueorphBeige" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 9 )
_base_jump_speed = -600

[node name="AnimatedSpriteBeige" type="AnimatedSprite" parent="."]
position = Vector2( 0, -36 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="AnimatedSpriteBlue" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -36 )
frames = SubResource( 5 )
animation = "idle"
playing = true

[node name="AnimatedSpriteGreen" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -36 )
frames = SubResource( 4 )
animation = "idle"
playing = true

[node name="AnimatedSpritePink" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -36 )
frames = SubResource( 3 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -31 )
shape = SubResource( 2 )

[node name="HurtBox" parent="." instance=ExtResource( 22 )]
collision_layer = 16

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -38 )
shape = SubResource( 6 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 23 )
bus = "Sounds"

[node name="HitBox" parent="." instance=ExtResource( 24 )]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( -3, 5 )
shape = SubResource( 7 )

[connection signal="animation_finished" from="AnimatedSpriteBeige" to="." method="_on_AnimatedSpriteBeige_animation_finished"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="invincibility_ended" from="HurtBox" to="." method="_on_HurtBox_invincibility_ended"]
[connection signal="invincibility_started" from="HurtBox" to="." method="_on_HurtBox_invincibility_started"]

[editable path="HurtBox"]
[editable path="HitBox"]
